--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "@adiwajshing/baileys": "git+https://github.com/adiwajshing/Baileys.git",
+    "@adiwajshing/baileys": "git+https://github.com/WhiskeySockets/Baileys.git",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@types/async-lock": "^1.4.0",
     "@types/express": "^4.17.16",
