--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/async-lock": "^1.4.0",
     "@types/express": "^4.17.16",
     "@types/multer": "^1.4.7",
+    "@whiskeysockets/baileys": "^6.7.2",
     "async-lock": "^1.4.0",
     "av": "^0.4.9",
     "express": "^4.18.2",
