fixed general bugs

--- a/.env-example
+++ b/.env-example
@@ -2,12 +2,12 @@
 # GENERAL CONFIGURATION
 # ==================================
 LOG_LEVEL=silent
-REQUEST_IP=
+REQUEST_IP=localhost
 
 # ==================================
 # WEBHOOK CONFIGURATION
 # ==================================
-WEBHOOK_ENABLED=true
+WEBHOOK_ENABLED=false
 WEBHOOK_ALLOWED_EVENTS=
 WEBHOOK_URL=
 WEBHOOK_APP_IP=
@@ -18,12 +18,12 @@ WEBHOOK_APP_PORT=
 # ==================================
 APP_IP=
 APP_PORT=
-PRECENSE_TYPING=true
+PRECENSE_TYPING=false
 SEND_AD_EVERY_N_TIMES=
 ONLINE_ON_CONNECT=false
 
 # ==================================
 # WEBHOOK CONFIGURATION
 # ==================================
-WS_USERS=
-WS_NUMBERS=
+WS_USERS=elio
+WS_NUMBERS=584120494723
